# pyxll-holoviz

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml
pyxll_holoviz/: hvplot_bridge.py  panel_bridge.py  pyxll.py  udfs.py
pyxll_holoviz/ribbon/: __init__.py  actions.py  ribbon.xml
