[project]
name = "pyxll-holoviz"
version = "1.0.0"
authors = [
  { name="Tony Roberts", email="tony@pyxll.com" },
]
description = "PyXLL extension for Holoviz charts and panels"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "pyxll >= 5.9.0",
    "hvplot",
    "holoviews",
    "panel",
    "tornado",
    "pywin32"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools"
]

[project.entry-points."pyxll"]
modules = "pyxll_holoviz.pyxll:modules"
ribbon = "pyxll_holoviz.pyxll:ribbon"

[tool.setuptools.package-data]
"pyxll_holoviz.ribbon" = [
    "*.xml", 
    "*.png"
]
